Description : modified charts layout Bug ID: NA Reviewed By: Sanjay

--- a/trunk/technical/src/apps/user/patientcare/src/app/modules/patient-management/charts/charts.component.css
+++ b/trunk/technical/src/apps/user/patientcare/src/app/modules/patient-management/charts/charts.component.css
@@ -64,15 +64,13 @@
 
 
 .float-btn-cat {
-    /* background-color: #696969; */
-    border-radius: 3px;
-    /* border-radius:22; */
-    width: 23;
-    height: 23;
+    background-color: #396766;
+    /* border-radius: 3px; */
+    border-radius:22;
+    width: 44;
+    height: 44;
     text-align: center;
     vertical-align: middle;
-    /* opacity:0.7; */
-    background-color: rgb(105, 105, 105, 0.6);
 }
 
 .category-header {
@@ -179,3 +177,8 @@
     margin: 0 0;
     padding: 3px 0px;
 }
+.float-btn-container {
+    margin-top: 20%
+    /* margin-left: 80%; */
+}
+
